--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.0",
-    "@types/node": "^16.18.0",
-    "@types/react": "^18.0.21",
+    "@types/node": "^16.18.2",
+    "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.6",
+    "@types/react-leaflet": "^2.8.2",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
