--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@types/proj4": "^2.5.2",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.3",
     "leaflet": "^1.9.2",
     "proj4": "^2.7.5",
     "proj4leaflet": "^1.0.2",
