--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@types/proj4": "^2.5.2",
     "@types/react-redux": "^7.1.24",
-    "axios": "^1.1.3",
     "leaflet": "^1.9.2",
     "proj4": "^2.7.5",
     "proj4leaflet": "^1.0.2",
@@ -14,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
