--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
-    "@types/proj4": "^2.5.2",
-    "@types/react-redux": "^7.1.24",
     "leaflet": "^1.9.2",
     "leaflet-drift-marker": "^2.0.0",
     "proj4": "^2.7.5",
@@ -27,9 +25,11 @@
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^16.18.2",
+    "@types/proj4": "^2.5.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-leaflet": "^2.8.2",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
@@ -42,6 +42,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.54.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
