--- a/package.json
+++ b/package.json
@@ -15,22 +15,27 @@
     "react-leaflet-tracking-marker": "^1.0.15",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.2.2",
     "@types/leaflet": "^1.9.0",
-    "@types/node": "^16.18.2",
+    "@types/node": "^16.18.3",
     "@types/proj4": "^2.5.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-leaflet": "^2.8.2",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^29.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -38,6 +43,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.3.0",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -45,12 +53,14 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.0",
     "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
