--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
