--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -36,7 +37,7 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
-    "babel-jest": "^29.3.0",
+    "babel-jest": "^29.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
