--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-node_modules
-package-lock.json
-dist
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 .env
+dist
+package-lock.json
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
