--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-leaflet": "^4.1.0",
+    "react-leaflet-cluster": "^2.0.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
