--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-leaflet": "^2.8.2",
+    "@types/react-leaflet-markercluster": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^29.3.1",
