--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "homepage": "https://kate-chu.github.io/parking_genie",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-leaflet-markercluster": "^3.0.0",
     "gh-pages": "^4.0.0",
     "leaflet": "^1.9.2",
+    "leaflet.markercluster": "^1.5.3",
     "proj4": "^2.7.5",
     "proj4leaflet": "^1.0.2",
     "react": "^18.2.0",
@@ -14,6 +16,7 @@
     "react-hook-form": "^7.39.1",
     "react-leaflet": "^4.1.0",
     "react-leaflet-cluster": "^2.0.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
@@ -32,12 +35,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.2",
     "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/node": "^16.18.3",
     "@types/proj4": "^2.5.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-leaflet": "^2.8.2",
-    "@types/react-leaflet-markercluster": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^29.3.1",
