--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet.markercluster": "^1.5.3",
     "proj4": "^2.7.5",
     "proj4leaflet": "^1.0.2",
+    "puppeteer": "^14.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
@@ -37,12 +38,12 @@
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-geosearch": "^3.0.0",
     "@types/leaflet.markercluster": "^1.5.1",
-    "@types/react-leaflet-markercluster": "^3.0.0",
     "@types/node": "^16.18.3",
     "@types/proj4": "^2.5.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-leaflet": "^2.8.2",
+    "@types/react-leaflet-markercluster": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^29.3.1",
@@ -73,7 +74,8 @@
     "test": "jest --coverage",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "e2etest": "node ./src/e2eTest.js"
   },
   "eslintConfig": {
     "extends": [
